modal for donations

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -284,3 +284,9 @@ b, strong {
 //   background-image: image-url("noise.png");
 //   border-color: $light-grey;
 // }
+
+.btn-donate {
+  color: $off-white;
+  background-color: $grey-blue;
+  background-image: image-url("noise.png");
+}
