--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -70,9 +70,9 @@
             <% end %>
           </li>
           <li>
-            <%= link_to "#", method: :get do %>
-              <button type="button" class="btn btn-danger">Donate</button>
-            <% end %>
+            
+              <button style="margin-top: 1.1em; margin-left: .75em;" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-danger">Donate</button>
+            
         <% end %>
 
     </div>
@@ -81,3 +81,157 @@
   <%= render 'shared/invite_modal'%>
   <%= render 'shared/confirm_modal'%>
 <%end%>
+
+<div class="ideas">
+  <div class="modal fade" id="donate_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="featurette dark">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title center" id="myModalLabel">Make a donation.</h4>
+          </div>
+          <div class="modal-body">          
+            <strong>Thanks so much for your support</strong>. Before you continue, there are a couple of things you should know about this project.
+            <br>
+            <br>
+            OpenFn is a registered non-profit, but our <strong>501(c)3 application is pending</strong>.
+            <br>
+            <br>
+            We believe that we'll receive our 501(c)3 approval in this tax year, 2015, but if the IRS ultimately rejects our application, then your donation will not be tax-deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
+            <br>
+            <br>
+            To make a donation, select your desired amount below and enter your credit card details on the following page.
+            <br>
+            <br>
+            <br>
+            <div class="row center">
+              <div class="col-sm-2 col-sm-offset-3">
+                <button class="btn btn-donate" id="d10"><span class="mb-title">$10</span></button>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-donate" id="d25"><span class="mb-title">$25</span></button>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-donate" id="d50"><span class="mb-title">$50</span></button>
+              </div>
+            </div>
+            <br>
+            <div class="row center">
+              <div class="col-sm-2 col-sm-offset-3">
+                <button class="btn btn-donate" id="d100"><span class="mb-title">$100</span></button>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-donate" id="d200"><span class="mb-title">$200</span></button>
+              </div>
+              <div class="col-sm-2">
+                <button class="btn btn-donate" id="d300"><span class="mb-title">$300</span></button>
+              </div>
+            </div>
+            <br>
+            <div class="row center">
+              <div class="col-sm-2 col-sm-offset-3">
+                <button class="btn btn-donate" id="d1k"><span class="mb-title">$1000</span></button>
+              </div>
+              <div class="col-sm-4">
+                <div class="input-group">
+                  <span class="input-group-addon">$</span>
+                  <input type="text" class="form-control" style="height: 2.8em;" aria-label="Amount (to the nearest dollar)" id="custom-donation-amount" placeholder="Custom">
+                  <span class="input-group-btn">
+                    <button class="btn btn-donate" type="button" id="customButton"><span class="mb-title">Go</span></button>
+                  </span>
+                </div>
+              </div>
+            </div>
+            <br>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://checkout.stripe.com/checkout.js"></script>
+
+<script>
+  var handler = StripeCheckout.configure({
+    key: 'pk_test_W9FR29OKTtcmeAftxYCHtEM2',
+    name: 'open[Fn]',
+    panelLabel: "Donate {{amount}}",
+    description: 'One-time donation to open[Fn]',
+    token: function(token) {
+      // Use the token to create the charge with a server-side script.
+      // You can access the token ID with `token.id`
+    }
+  });
+
+  $('#d10').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 1000
+    });
+    e.preventDefault();
+  });
+
+  $('#d25').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 2500
+    });
+    e.preventDefault();
+  });
+
+  $('#d50').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 5000
+    });
+    e.preventDefault();
+  });
+
+  $('#d100').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 10000
+    });
+    e.preventDefault();
+  });
+
+  $('#d200').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 20000
+    });
+    e.preventDefault();
+  });
+
+  $('#d300').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 30000
+    });
+    e.preventDefault();
+  });
+
+  $('#d1k').on('click', function(e) {
+    // Open Checkout with further options
+    handler.open({
+      amount: 100000
+    });
+    e.preventDefault();
+  });
+
+    $('#customButton').on('click', function(e) {
+    // Open Checkout with further options
+    var amount = $("#custom-donation-amount").val() * 100;
+    handler.open({
+      amount: amount
+    });
+    e.preventDefault();
+  });
+
+  // Close Checkout on page navigation
+  $(window).on('popstate', function() {
+    handler.close();
+  });
+</script>
