fixes to sizing of donation buttons

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -289,4 +289,14 @@ b, strong {
   color: $off-white;
   background-color: $grey-blue;
   background-image: image-url("noise.png");
+  width: 75px;
+  height: 50px;
+}
+
+.btn-donate-go {
+  color: $off-white;
+  background-color: $grey-blue;
+  background-image: image-url("noise.png");
+  width: 50px;
+  height: 50px;
 }
