--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -95,10 +95,10 @@
             <strong>Thanks so much for your support</strong>. Before you continue, there are a couple of things you should know about this project.
             <br>
             <br>
-            OpenFn is a registered non-profit, but our <strong>501(c)3 application is pending</strong>.
+            OpenFn is a registered non-profit, but we <strong>don't yet have 501(c)3 approval</strong>.
             <br>
             <br>
-            We believe that we'll receive our 501(c)3 approval in this tax year, 2015, but if the IRS ultimately rejects our application, then your donation will not be tax-deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
+            We believe that we'll receive 501(c)3 approval in this tax year, 2015. If we don't, your donation will not be tax-deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
             <br>
             <br>
             To make a donation, select your desired amount below and enter your credit card details on the following page.
@@ -136,9 +136,9 @@
               <div class="col-sm-4">
                 <div class="input-group">
                   <span class="input-group-addon">$</span>
-                  <input type="text" class="form-control" style="height: 2.8em;" aria-label="Amount (to the nearest dollar)" id="custom-donation-amount" placeholder="Custom">
+                  <input type="text" class="form-control" style="height: 50px;" aria-label="Amount (to the nearest dollar)" id="custom-donation-amount" placeholder="Custom">
                   <span class="input-group-btn">
-                    <button class="btn btn-donate" type="button" id="customButton"><span class="mb-title">Go</span></button>
+                    <button class="btn btn-donate-go" type="button" id="customButton"><span class="mb-title">Go</span></button>
                   </span>
                 </div>
               </div>
