--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -70,10 +70,10 @@
             <% end %>
           </li>
           <li>
-            
-              <button style="margin-top: 1.1em; margin-left: .75em;" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-danger">Donate</button>
-            
         <% end %>
+        <li>
+          <button style="margin-top: 1.1em; margin-left: .75em;" type="button" data-toggle="modal" data-target="#donate_modal" class="btn btn-danger">Donate</button>
+        </li>
 
     </div>
 </nav>
@@ -91,7 +91,7 @@
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title center" id="myModalLabel">Make a donation.</h4>
           </div>
-          <div class="modal-body">          
+          <div class="modal-body">
             <strong>Thanks so much for your support</strong>. Before you continue, there are a couple of things you should know about this project.
             <br>
             <br>
@@ -133,8 +133,8 @@
               <div class="col-sm-2 col-sm-offset-3">
                 <%= form_tag charges_path do %>
                   <div class="input-group">
-                    <input id="btn_amount" type="hidden" value="1000" />
-                    <button type="button" class="btn btn-donate" id="customButton"><span class="mb-title">$1000</span></button>
+                    <input id="btn_amount" name='charges[amount]' type="hidden" value="1000" />
+                    <button type="submit" class="btn btn-donate" id="customButton"><span class="mb-title">$1000</span></button>
                   </div>
                 <% end %>
               </div>
@@ -174,17 +174,18 @@
 <script src="https://checkout.stripe.com/checkout.js"></script>
 
 <script>
-  var handler = StripeCheckout.configure({
-    key: 'pk_test_W9FR29OKTtcmeAftxYCHtEM2',
-    panelLabel: "Donate {{amount}}",
-    description: 'Donation to open[Fn]',
-    token: function(token) {
-      // Use the token to create the charge with a server-side script.
-      // You can access the token ID with `token.id`
-    }
-  });
+  $('#customButton').on('click', function(e) {
+    var handler = StripeCheckout.configure({
+      key: 'pk_test_W9FR29OKTtcmeAftxYCHtEM2',
+      panelLabel: "Donate {{amount}}",
+      description: 'Donation to open[Fn]',
+      token: function(token) {
+        // Use the token to create the charge with a server-side script.
+        // You can access the token ID with `token.id`
+        $(e.target).parents('form').submit();
+      }
+    });
 
-    $('#customButton').on('click', function(e) {
     // Open Checkout with further options
     var amount = $("#btn_amount").val() * 100;
     handler.open({
