--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,24 @@
-<h2>Thanks, you paid <strong>$ <%= @amount.to_i / 100 %></strong>!</h2>
+<div class="ideas">
+
+<header class="header-image">
+  <div class="headline">
+    <h1>
+      thank <strong>You</strong>
+    </h1>
+    <h3>
+      Your <strong>support</strong> is what keeps openFn connecting.
+    </h3>
+  </div>
+</header>
+
+<div class="featurette dark">
+  <hr class="light">
+  <hr class="dark">
+    <div class="container">
+	    <br>
+        <div class="row flat">
+			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly.
+		</div>
+	</div>
+</div>
+</div>
