thank you message

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -3,7 +3,7 @@
 <header class="header-image">
   <div class="headline">
     <h1>
-      thank <strong>You</strong>
+      thank <strong>you!</strong>
     </h1>
     <h3>
       Your <strong>support</strong> is what keeps openFn connecting.
@@ -17,7 +17,9 @@
     <div class="container">
 	    <br>
         <div class="row flat">
-			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly.
+    			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly. Thank you so much.
+          <br>
+          The openFn Team
 		</div>
 	</div>
 </div>
