--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -19,7 +19,8 @@
         <div class="row flat">
     			You donated <strong>$<%= @amount.to_i / 100 %></strong> and will receive an email receipt from Stripe shortly. Thank you so much.
           <br>
-          The openFn Team
+          <br>
+          — The openFn Team
 		</div>
 	</div>
 </div>
