--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -97,7 +97,7 @@
                   <% else %>
                     <%= f.submit "Sign up", class: 'btn btn-success submit_btn' %>
                   <% end %>
-                  <script src="https://checkout.stripe.com/checkout.js"></script>
+                  <script async src="https://checkout.stripe.com/checkout.js"></script>
                   <% end %>
               </div>
             </div>
