--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-  padding-top: 68px;
+  padding-top: rem-calc(68px);
   font-family : 'Source Sans Pro',Verdana,Helvetica,Arial,serif;
   color: $off-white;
   line-height: 1;
