--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,13 +4,13 @@
       <div class="col-xs-12">
 
         <p class="text-center">
-          Openfn.org is a non-profit and all of our code is open source.
+          openFn is a non-profit and all of our code is open source.
           <br><br>
           <a href="https://github.com/OpenFn/OpenFn-Site" target="_blank">
-            Join our family of developers <i class="fa fa-github fa-lg"></i>
+            Join our developers <i class="fa fa-github fa-lg"></i>
           </a>, 
           <a href="mailto:admin@openfn.org" target="_blank">
-           share your ideas <i class="fa fa-envelope-o fa-lg"></i>
+           get in touch <i class="fa fa-envelope-o fa-lg"></i>
           </a>, or follow us on 
           <a href="https://www.facebook.com/openfn" target="_blank">
             <i class="fa fa-facebook fa-lg"></i> 
