modal donation language

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -93,10 +93,10 @@
             <strong>Thanks so much for your support</strong>. Before you continue, there are a couple of things you should know about this project.
             <br>
             <br>
-            OpenFn is a registered non-profit, but we <strong>don't yet have 501(c)3 approval</strong>.
+            OpenFn is a registered non-profit, but we don't yet have 501(c)3 approval.
             <br>
             <br>
-            We believe that we'll receive 501(c)3 approval in this tax year, 2015. If we don't, your donation will not be tax-deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
+            We believe that we'll receive 501(c)3 approval in this tax year, 2015. When we are granted 501(c)3 status, all donations that were made previously will be recognized as tax deductible. To learn more, click <a href="http://www.irs.gov/Charities-&-Non-Profits/Charitable-Organizations/Contributions-to-Organization-with-IRS-Application-Pending" target="_blank">here.</a>
             <br>
             <br>
             To make a donation, select your desired amount below and enter your credit card details on the following page.
