--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -4,7 +4,10 @@
   <p>These are the current reviews for this product in our system</p>
   <ul id="reviews">
   <% @reviews.each do |c| %>
-    <li>Review: <%= c.review %></li><span>Rating: <%= c.rating %></span>
+    <li><strong>Review: </strong><%= c.review %>
+    <br>
+    <span><strong>Rating: </strong><%= c.rating %></span>
+    </li>
   <% end %>
   </ul>
 <% end %>
